// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Teaser renders correctly as default teaser with badges 1`] = `
.c6 {
  margin: 0;
  font-size: 12px;
  line-height: 16px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c15 {
  margin: 0;
  color: #00C8DC;
  font-size: 40px;
  line-height: 44px;
  font-family: OswaldBold,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  white-space: normal;
  overflow: hidden;
  padding-left: 2px;
  max-height: calc(44px * 2);
  -webkit-line-clamp: 2;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c18 {
  margin: 16px 0 0 0;
  color: #666666;
  font-size: 16px;
  line-height: 24px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  overflow: hidden;
  max-height: calc(24px * 5);
  -webkit-line-clamp: 5;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c23 {
  color: #999999;
  font-size: 16px;
  line-height: 24px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c16 {
  font-weight: bold;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  max-height: -webkit-fit-content;
  max-height: -moz-fit-content;
  max-height: fit-content;
  padding-top: 0;
  text-transform: none;
  line-height: 58px;
  font-size: 75px;
}

.c7 {
  background-color: #00C8DC;
  color: #FFFFFF;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 24px;
  padding-right: 24px;
  margin-left: 0;
  margin-right: 9px;
  box-sizing: content-box;
  height: 28px;
  overflow: auto;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
  height: 30px;
}

.c5 {
  display: inline-block;
  position: relative;
  margin-right: 8px;
  max-width: 100%;
}

.c8 {
  display: inline-block;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c12 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 100%;
}

.c12 img {
  height: 100%;
  object-fit: cover;
}

.c3 {
  position: absolute;
  left: 0;
  top: -14px;
  max-width: 100%;
  z-index: 1;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  cursor: pointer;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-property: border-color,box-shadow,-webkit-transform;
  -webkit-transition-property: border-color,box-shadow,transform;
  transition-property: border-color,box-shadow,transform;
  border-radius: 8px;
  height: 100%;
  width: 100%;
}

.c1 {
  position: relative;
  outline: none;
  width: 100%;
}

.c1 .c2 {
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c22 svg {
  width: 25px;
  height: 25px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: #00C8DC;
}

.c22 svg g,
.c22 svg p {
  fill: #00C8DC;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  color: #999999;
  opacity: 1.0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  position: relative;
  padding: 16px;
}

.c20::after {
  content: '';
  position: absolute;
  display: none;
  bottom: -2px;
  height: 1px;
  background-color: #999999;
  -webkit-transform-origin: right center;
  -ms-transform-origin: right center;
  transform-origin: right center;
  -webkit-transform: scale(0,1);
  -ms-transform: scale(0,1);
  transform: scale(0,1);
  -webkit-transition: -webkit-transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  -webkit-transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
}

.c20:hover::after {
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c21 {
  margin-left: 0px;
  margin-right: 4px;
}

.c21 svg {
  height: 16px;
  width: 16px;
}

.c24 {
  display: block;
  color: #999999;
}

.c0 {
  height: calc(100% - 16px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  margin-top: 16px;
}

.c0 > div {
  width: 100%;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  min-width: 200px;
  padding-top: 0px;
  padding-left: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  height: 280px;
}

.c13 {
  -webkit-flex: 2 1 auto;
  -ms-flex: 2 1 auto;
  flex: 2 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 24px 16px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  text-transform: none;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
}

.c17 {
  margin: 0;
}

.c19 {
  margin-top: auto;
  padding-top: 24px;
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c16 {
    max-height: 100%;
  }
}

@media (min-width:752px) {
  .c16 {
    font-size: 40px;
    line-height: 70px;
  }
}

@media (min-width:1232px) {
  .c16 {
    font-size: 75px;
    line-height: 80px;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c12 {
    max-width: 100%;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c12 img {
    max-width: 100%;
    width: auto;
    height: auto;
  }
}

@media (max-width:752px) {
  .c3 > div > div:nth-child(n + 3) {
    display: none;
  }
}

@media (min-width:512px) {
  .c9:hover {
    -webkit-transform: translateY(-1px);
    -ms-transform: translateY(-1px);
    transform: translateY(-1px);
    box-shadow: 0 24px 38px 3px rgba(0,0,0,0.07),0 9px 46px 8px rgba(0,0,0,0.06),0 11px 15px -7px rgba(0,0,0,0.10);
    border-color: rgba(0,0,0,0);
  }
}

@media (min-width:512px) {

}

@media (min-width:752px) {
  .c0 {
    height: 300px;
  }
}

@media (min-width:752px) {
  .c10 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:752px) {
  .c11 {
    max-width: 33%;
    height: 100%;
  }
}

@media (min-width:752px) {
  .c13 {
    padding: 32px 24px;
  }
}

@media (min-width:752px) {
  .c19 {
    padding-top: 32px;
  }
}

<div
  className="c0"
  onClick={[Function]}
  orientation="auto"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
    >
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <span
            className="c6 c7"
            fontSize="xxs"
          >
            <div
              className="c8"
            >
              Featured
            </div>
          </span>
        </div>
        <div
          className="c5"
        >
          <span
            className="c6 c7"
            fontSize="xxs"
          >
            <div
              className="c8"
            >
              Live!!!!
            </div>
          </span>
        </div>
      </div>
    </div>
    <div
      className="c9"
      display="flex"
      elevation={0}
      shape="rounded-big"
    >
      <div
        className="c10"
        orientation="auto"
      >
        <div
          className="c11"
          orientation="auto"
        >
          <div
            className="c12"
            height="100%"
            width="100%"
          >
            <picture
              style={
                Object {
                  "height": "100%",
                  "width": "100%",
                }
              }
            >
              <img
                alt="Teaser Picture1"
                height="100%"
                loading="eager"
                src="public/images/teasers/project_teaser_600x450.jpg"
                width="100%"
              />
            </picture>
          </div>
        </div>
        <div
          className="c13"
        >
          <div
            className="c14"
            onClick={[Function]}
          >
            <p
              className="c15 c16"
              color="primary"
              fontFamily="featured"
              fontSize="xxxxl"
              spacing="base"
            >
              High standards require sensible processes
            </p>
          </div>
          <div
            className="c17"
          >
            <p
              className="c18"
              color="grey5"
              fontSize="sm"
            >
              Well, the answer is obvious: “He hasn’t died yet.” Fortunately, for us, Munger has kept on ticking.
            </p>
          </div>
          <div
            className="c19"
          >
            <a
              className="c20"
              href="/"
              onClick={[Function]}
            >
              <span
                className="c21"
                color="grey4"
              >
                <div
                  className="c22"
                  color="primary"
                >
                  <svg
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.78 11.28a.75.75 0 01.22.53v.38a.77.77 0 01-.22.53l-5.14 5.13a.5.5 0 01-.71 0l-.71-.71a.49.49 0 010-.7L13.67 12 9.22 7.56a.5.5 0 010-.71l.71-.7a.5.5 0 01.71 0z"
                    />
                  </svg>
                </div>
              </span>
              <span
                className="c23 c24"
                color="grey4"
                fontSize="sm"
              >
                To the Moon!!
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Teaser renders correctly as foldable teaser  1`] = `
.c6 {
  margin: 0;
  color: #00C8DC;
  font-size: 40px;
  line-height: 44px;
  font-family: OswaldBold,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  white-space: normal;
  overflow: hidden;
  padding-left: 2px;
  max-height: calc(44px * 2);
  -webkit-line-clamp: 2;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c13 {
  margin: 16px 0 0 0;
  color: #666666;
  font-size: 16px;
  line-height: 24px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  overflow: hidden;
  max-height: calc(24px * 5);
  -webkit-line-clamp: 5;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c18 {
  color: #999999;
  font-size: 16px;
  line-height: 24px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c7 {
  font-weight: bold;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  max-height: -webkit-fit-content;
  max-height: -moz-fit-content;
  max-height: fit-content;
  padding-top: 0;
  text-transform: none;
  line-height: 58px;
  font-size: 26px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  cursor: pointer;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-property: border-color,box-shadow,-webkit-transform;
  -webkit-transition-property: border-color,box-shadow,transform;
  transition-property: border-color,box-shadow,transform;
  border-radius: 8px;
  height: 100%;
  width: 100%;
}

.c1 {
  position: relative;
  outline: none;
  width: 100%;
}

.c11 {
  overflow: hidden;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 svg {
  width: 16px;
  height: 16px;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  fill: #00C8DC;
}

.c9 svg g,
.c9 svg p {
  fill: #00C8DC;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c17 svg {
  width: 25px;
  height: 25px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: #00C8DC;
}

.c17 svg g,
.c17 svg p {
  fill: #00C8DC;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  color: #999999;
  opacity: 1.0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  position: relative;
  padding: 16px;
}

.c15::after {
  content: '';
  position: absolute;
  display: none;
  bottom: -2px;
  height: 1px;
  background-color: #999999;
  -webkit-transform-origin: right center;
  -ms-transform-origin: right center;
  transform-origin: right center;
  -webkit-transform: scale(0,1);
  -ms-transform: scale(0,1);
  transform: scale(0,1);
  -webkit-transition: -webkit-transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  -webkit-transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
}

.c15:hover::after {
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c16 {
  margin-left: 0px;
  margin-right: 4px;
}

.c16 svg {
  height: 16px;
  width: 16px;
}

.c19 {
  display: block;
  color: #999999;
}

.c0 {
  height: calc(100% - 16px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  margin-top: 16px;
}

.c0 > div {
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c4 {
  -webkit-flex: 2 1 auto;
  -ms-flex: 2 1 auto;
  flex: 2 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 24px 16px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  text-transform: none;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
}

.c12 {
  margin: 0;
}

.c14 {
  margin-top: auto;
  padding-top: 24px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  margin-left: 16px;
  margin-top: 0;
}

.c10 svg {
  height: 16px;
  width: 16px;
  -webkit-transition: -webkit-transform 0.25s ease-in-out;
  -webkit-transition: transform 0.25s ease-in-out;
  transition: transform 0.25s ease-in-out;
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c7 {
    max-height: 100%;
  }
}

@media (min-width:512px) {
  .c2:hover {
    -webkit-transform: translateY(-1px);
    -ms-transform: translateY(-1px);
    transform: translateY(-1px);
    box-shadow: 0 24px 38px 3px rgba(0,0,0,0.07),0 9px 46px 8px rgba(0,0,0,0.06),0 11px 15px -7px rgba(0,0,0,0.10);
    border-color: rgba(0,0,0,0);
  }
}

@media (min-width:512px) {

}

@media (min-width:752px) {
  .c0 {
    height: calc(100% - 16px);
  }
}

@media (min-width:752px) {
  .c3 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:752px) {
  .c4 {
    padding: 32px 24px;
  }
}

@media (min-width:752px) {
  .c14 {
    padding-top: 32px;
  }
}

@media (min-width:752px) {
  .c10 svg {
    height: 26px;
    width: 26px;
  }
}

@media (min-width:752px) {
  .c10 {
    margin-left: 24px;
  }
}

<div
  className="c0"
  onClick={[Function]}
  orientation="portrait"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      display="flex"
      elevation={0}
      shape="rounded-big"
    >
      <div
        className="c3"
        orientation="portrait"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
            onClick={[Function]}
          >
            <p
              className="c6 c7"
              color="primary"
              fontFamily="featured"
              fontSize="xxxxl"
              spacing="base"
            >
              High standards require sensible processes
            </p>
            <div
              className="c8"
            >
              <div
                className="c9 c10"
                color="primary"
                height="sm"
                rotate={180}
                width="sm"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.78 11.28a.75.75 0 01.22.53v.38a.77.77 0 01-.22.53l-5.14 5.13a.5.5 0 01-.71 0l-.71-.71a.49.49 0 010-.7L13.67 12 9.22 7.56a.5.5 0 010-.71l.71-.7a.5.5 0 01.71 0z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            className="c11"
            data-test="foldable"
            onTransitionEnd={[Function]}
            style={
              Object {
                "height": 0,
                "transition": "height 300ms linear",
              }
            }
          >
            <div
              data-test="inner-foldable"
            >
              <div
                className="c12"
              >
                <p
                  className="c13"
                  color="grey5"
                  fontSize="sm"
                >
                  Well, the answer is obvious: “He hasn’t died yet.” Fortunately, for us, Munger has kept on ticking.
                </p>
              </div>
              <div
                className="c14"
              >
                <a
                  className="c15"
                  href="/"
                  onClick={[Function]}
                >
                  <span
                    className="c16"
                    color="grey4"
                  >
                    <div
                      className="c17"
                      color="primary"
                    >
                      <svg
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15.78 11.28a.75.75 0 01.22.53v.38a.77.77 0 01-.22.53l-5.14 5.13a.5.5 0 01-.71 0l-.71-.71a.49.49 0 010-.7L13.67 12 9.22 7.56a.5.5 0 010-.71l.71-.7a.5.5 0 01.71 0z"
                        />
                      </svg>
                    </div>
                  </span>
                  <span
                    className="c18 c19"
                    color="grey4"
                    fontSize="sm"
                  >
                    To the Moon!!
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Teaser renders correctly as teaser in portrait mode 1`] = `
.c8 {
  margin: 0;
  color: #00C8DC;
  font-size: 40px;
  line-height: 44px;
  font-family: OswaldBold,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  white-space: normal;
  overflow: hidden;
  padding-left: 2px;
  max-height: calc(44px * 2);
  -webkit-line-clamp: 2;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c11 {
  margin: 16px 0 0 0;
  color: #666666;
  font-size: 16px;
  line-height: 24px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  overflow: hidden;
  max-height: calc(24px * 5);
  -webkit-line-clamp: 5;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c16 {
  color: #999999;
  font-size: 16px;
  line-height: 24px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c9 {
  font-weight: bold;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  max-height: -webkit-fit-content;
  max-height: -moz-fit-content;
  max-height: fit-content;
  padding-top: 0;
  text-transform: none;
  line-height: 58px;
  font-size: 26px;
}

.c5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 100%;
}

.c5 img {
  height: 100%;
  object-fit: cover;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  cursor: pointer;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-property: border-color,box-shadow,-webkit-transform;
  -webkit-transition-property: border-color,box-shadow,transform;
  transition-property: border-color,box-shadow,transform;
  border-radius: 8px;
  height: 100%;
  width: 100%;
}

.c1 {
  position: relative;
  outline: none;
  width: 100%;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c15 svg {
  width: 25px;
  height: 25px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: #00C8DC;
}

.c15 svg g,
.c15 svg p {
  fill: #00C8DC;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  color: #999999;
  opacity: 1.0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  position: relative;
  padding: 16px;
}

.c13::after {
  content: '';
  position: absolute;
  display: none;
  bottom: -2px;
  height: 1px;
  background-color: #999999;
  -webkit-transform-origin: right center;
  -ms-transform-origin: right center;
  transform-origin: right center;
  -webkit-transform: scale(0,1);
  -ms-transform: scale(0,1);
  transform: scale(0,1);
  -webkit-transition: -webkit-transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  -webkit-transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
}

.c13:hover::after {
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c14 {
  margin-left: 0px;
  margin-right: 4px;
}

.c14 svg {
  height: 16px;
  width: 16px;
}

.c17 {
  display: block;
  color: #999999;
}

.c0 {
  height: calc(100% - 16px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  margin-top: 16px;
}

.c0 > div {
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  min-width: 200px;
  padding-top: 0px;
  padding-left: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  height: 280px;
}

.c6 {
  -webkit-flex: 2 1 auto;
  -ms-flex: 2 1 auto;
  flex: 2 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 24px 16px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  text-transform: none;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
}

.c10 {
  margin: 0;
}

.c12 {
  margin-top: auto;
  padding-top: 24px;
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c9 {
    max-height: 100%;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c5 {
    max-width: 100%;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c5 img {
    max-width: 100%;
    width: auto;
    height: auto;
  }
}

@media (min-width:512px) {
  .c2:hover {
    -webkit-transform: translateY(-1px);
    -ms-transform: translateY(-1px);
    transform: translateY(-1px);
    box-shadow: 0 24px 38px 3px rgba(0,0,0,0.07),0 9px 46px 8px rgba(0,0,0,0.06),0 11px 15px -7px rgba(0,0,0,0.10);
    border-color: rgba(0,0,0,0);
  }
}

@media (min-width:512px) {

}

@media (min-width:752px) {
  .c0 {
    height: calc(100% - 16px);
  }
}

@media (min-width:752px) {
  .c3 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:752px) {
  .c4 {
    max-width: none;
    height: 280px;
  }
}

@media (min-width:752px) {
  .c6 {
    padding: 32px 24px;
  }
}

@media (min-width:752px) {
  .c12 {
    padding-top: 32px;
  }
}

<div
  className="c0"
  onClick={[Function]}
  orientation="portrait"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      display="flex"
      elevation={0}
      shape="rounded-big"
    >
      <div
        className="c3"
        orientation="portrait"
      >
        <div
          className="c4"
          orientation="portrait"
        >
          <div
            className="c5"
            height="100%"
            width="100%"
          >
            <picture
              style={
                Object {
                  "height": "100%",
                  "width": "100%",
                }
              }
            >
              <img
                alt="Teaser Picture2"
                height="100%"
                loading="eager"
                src="public/images/teasers/project_teaser_600x450.jpg"
                width="100%"
              />
            </picture>
          </div>
        </div>
        <div
          className="c6"
        >
          <div
            className="c7"
            onClick={[Function]}
          >
            <p
              className="c8 c9"
              color="primary"
              fontFamily="featured"
              fontSize="xxxxl"
              spacing="base"
            >
              saiyan Text!
            </p>
          </div>
          <div
            className="c10"
          >
            <p
              className="c11"
              color="grey5"
              fontSize="sm"
            >
              Well, the answer is obvious: “He hasn’t died yet.” Fortunately, for us, Munger has kept on ticking.
            </p>
          </div>
          <div
            className="c12"
          >
            <a
              className="c13"
              href="/"
              onClick={[Function]}
            >
              <span
                className="c14"
                color="grey4"
              >
                <div
                  className="c15"
                  color="primary"
                >
                  <svg
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.78 11.28a.75.75 0 01.22.53v.38a.77.77 0 01-.22.53l-5.14 5.13a.5.5 0 01-.71 0l-.71-.71a.49.49 0 010-.7L13.67 12 9.22 7.56a.5.5 0 010-.71l.71-.7a.5.5 0 01.71 0z"
                    />
                  </svg>
                </div>
              </span>
              <span
                className="c16 c17"
                color="grey4"
                fontSize="sm"
              >
                Can we filter??
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Teaser renders correctly as teaser with link list 1`] = `
.c6 {
  margin: 0;
  color: #00C8DC;
  font-size: 40px;
  line-height: 44px;
  font-family: OswaldBold,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  white-space: normal;
  overflow: hidden;
  padding-left: 2px;
  max-height: calc(44px * 2);
  -webkit-line-clamp: 2;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c10 {
  color: #999999;
  font-size: 16px;
  line-height: 24px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c7 {
  font-weight: bold;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  max-height: -webkit-fit-content;
  max-height: -moz-fit-content;
  max-height: fit-content;
  padding-top: 0;
  text-transform: none;
  line-height: 58px;
  font-size: 26px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  border-radius: 8px;
  height: 100%;
  width: 100%;
}

.c1 {
  position: relative;
  outline: none;
  width: 100%;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c15 svg {
  width: 25px;
  height: 25px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: #00C8DC;
}

.c15 svg g,
.c15 svg p {
  fill: #00C8DC;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  color: #999999;
  opacity: 1.0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  position: relative;
  padding: 16px;
}

.c9::after {
  content: '';
  position: absolute;
  display: none;
  bottom: -2px;
  height: 1px;
  background-color: #999999;
  -webkit-transform-origin: right center;
  -ms-transform-origin: right center;
  transform-origin: right center;
  -webkit-transform: scale(0,1);
  -ms-transform: scale(0,1);
  transform: scale(0,1);
  -webkit-transition: -webkit-transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  -webkit-transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
}

.c9:hover::after {
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c14 {
  margin-left: 0px;
  margin-right: 4px;
}

.c14 svg {
  height: 16px;
  width: 16px;
}

.c11 {
  display: block;
  color: #999999;
}

.c0 {
  height: calc(100% - 16px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: inherit;
  margin-top: 16px;
}

.c0 > div {
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c4 {
  -webkit-flex: 2 1 auto;
  -ms-flex: 2 1 auto;
  flex: 2 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 24px 16px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  text-transform: none;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
}

.c8 {
  margin-top: 24px;
}

.c12 {
  height: 16px;
}

.c13 {
  margin-top: auto;
  padding-top: 24px;
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c7 {
    max-height: 100%;
  }
}

@media (min-width:512px) {

}

@media (min-width:512px) {

}

@media (min-width:512px) {

}

@media (min-width:752px) {
  .c0 {
    height: calc(100% - 16px);
  }
}

@media (min-width:752px) {

}

@media (min-width:752px) {
  .c3 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:752px) {
  .c4 {
    padding: 32px 24px;
  }
}

@media (min-width:752px) {
  .c13 {
    padding-top: 32px;
  }
}

@media (min-width:752px) {

}

@media (min-width:752px) {

}

<div
  className="c0"
  onClick={[Function]}
  orientation="portrait"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      display="flex"
      elevation={0}
      shape="rounded-big"
    >
      <div
        className="c3"
        orientation="portrait"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
            onClick={[Function]}
          >
            <p
              className="c6 c7"
              color="primary"
              fontFamily="featured"
              fontSize="xxxxl"
              spacing="base"
            >
              Simon & Art Garfunkel
            </p>
          </div>
          <div
            className="c8"
          >
            <a
              className="c9"
              href="/"
              onClick={[Function]}
            >
              <span
                className="c10 c11"
                color="grey4"
                fontSize="sm"
              >
                Sound of Silence
              </span>
            </a>
            <div
              className="c12"
            />
            <a
              className="c9"
              href="/"
              onClick={[Function]}
            >
              <span
                className="c10 c11"
                color="grey4"
                fontSize="sm"
              >
                Homeward Bound
              </span>
            </a>
            <div
              className="c12"
            />
            <a
              className="c9"
              href="/"
              onClick={[Function]}
            >
              <span
                className="c10 c11"
                color="grey4"
                fontSize="sm"
              >
                Crazy nights at Alamo
              </span>
            </a>
          </div>
          <div
            className="c13"
          >
            <a
              className="c9"
              href="/"
              onClick={[Function]}
            >
              <span
                className="c14"
                color="grey4"
              >
                <div
                  className="c15"
                  color="primary"
                >
                  <svg
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.78 11.28a.75.75 0 01.22.53v.38a.77.77 0 01-.22.53l-5.14 5.13a.5.5 0 01-.71 0l-.71-.71a.49.49 0 010-.7L13.67 12 9.22 7.56a.5.5 0 010-.71l.71-.7a.5.5 0 01.71 0z"
                    />
                  </svg>
                </div>
              </span>
              <span
                className="c10 c11"
                color="grey4"
                fontSize="sm"
              >
                All wishes come true
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Teaser renders correctly as teaser with nothing but headline 1`] = `
.c6 {
  margin: 0;
  color: #00C8DC;
  font-size: 40px;
  line-height: 44px;
  font-family: OswaldBold,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  white-space: normal;
  overflow: hidden;
  padding-left: 2px;
  max-height: calc(44px * 2);
  -webkit-line-clamp: 2;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c7 {
  font-weight: bold;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  max-height: -webkit-fit-content;
  max-height: -moz-fit-content;
  max-height: fit-content;
  padding-top: 0;
  text-transform: none;
  line-height: 58px;
  font-size: 75px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  cursor: pointer;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-property: border-color,box-shadow,-webkit-transform;
  -webkit-transition-property: border-color,box-shadow,transform;
  transition-property: border-color,box-shadow,transform;
  border-radius: 8px;
  height: 100%;
  width: 100%;
}

.c1 {
  position: relative;
  outline: none;
  width: 100%;
}

.c0 {
  height: calc(100% - 16px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  margin-top: 16px;
}

.c0 > div {
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c4 {
  -webkit-flex: 2 1 auto;
  -ms-flex: 2 1 auto;
  flex: 2 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 24px 16px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  text-transform: none;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c7 {
    max-height: 100%;
  }
}

@media (min-width:752px) {
  .c7 {
    font-size: 40px;
    line-height: 70px;
  }
}

@media (min-width:1232px) {
  .c7 {
    font-size: 75px;
    line-height: 80px;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

@media (max-width:752px) {

}

@media (min-width:512px) {
  .c2:hover {
    -webkit-transform: translateY(-1px);
    -ms-transform: translateY(-1px);
    transform: translateY(-1px);
    box-shadow: 0 24px 38px 3px rgba(0,0,0,0.07),0 9px 46px 8px rgba(0,0,0,0.06),0 11px 15px -7px rgba(0,0,0,0.10);
    border-color: rgba(0,0,0,0);
  }
}

@media (min-width:512px) {

}

@media (min-width:752px) {
  .c0 {
    height: 300px;
  }
}

@media (min-width:752px) {
  .c3 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:752px) {

}

@media (min-width:752px) {
  .c4 {
    padding: 32px 24px;
  }
}

@media (min-width:752px) {

}

<div
  className="c0"
  onClick={[Function]}
  orientation="auto"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      display="flex"
      elevation={0}
      shape="rounded-big"
    >
      <div
        className="c3"
        orientation="auto"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
            onClick={[Function]}
          >
            <p
              className="c6 c7"
              color="primary"
              fontFamily="featured"
              fontSize="xxxxl"
              spacing="base"
            >
              High standards require sensible processes
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Teaser renders correctly as teaser without image 1`] = `
.c6 {
  margin: 0;
  color: #00C8DC;
  font-size: 40px;
  line-height: 44px;
  font-family: OswaldBold,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  white-space: normal;
  overflow: hidden;
  padding-left: 2px;
  max-height: calc(44px * 2);
  -webkit-line-clamp: 2;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c12 {
  margin: 16px 0 0 0;
  color: #666666;
  font-size: 16px;
  line-height: 24px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  overflow: hidden;
  max-height: calc(24px * 5);
  -webkit-line-clamp: 5;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c7 {
  font-weight: bold;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  max-height: -webkit-fit-content;
  max-height: -moz-fit-content;
  max-height: fit-content;
  padding-top: 0;
  text-transform: none;
  line-height: 58px;
  font-size: 26px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  cursor: pointer;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-property: border-color,box-shadow,-webkit-transform;
  -webkit-transition-property: border-color,box-shadow,transform;
  transition-property: border-color,box-shadow,transform;
  border-radius: 8px;
  height: 100%;
  width: 100%;
}

.c1 {
  position: relative;
  outline: none;
  width: 100%;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 svg {
  width: 16px;
  height: 16px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: #00C8DC;
}

.c9 svg g,
.c9 svg p {
  fill: #00C8DC;
}

.c0 {
  height: calc(100% - 16px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  margin-top: 16px;
}

.c0 > div {
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c4 {
  -webkit-flex: 2 1 auto;
  -ms-flex: 2 1 auto;
  flex: 2 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 24px 16px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  text-transform: none;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
}

.c11 {
  margin: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  margin-left: 16px;
  margin-top: 0;
}

.c10 svg {
  height: 16px;
  width: 16px;
  -webkit-transition: -webkit-transform 0.25s ease-in-out;
  -webkit-transition: transform 0.25s ease-in-out;
  transition: transform 0.25s ease-in-out;
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c7 {
    max-height: 100%;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

@media (min-width:512px) {
  .c2:hover {
    -webkit-transform: translateY(-1px);
    -ms-transform: translateY(-1px);
    transform: translateY(-1px);
    box-shadow: 0 24px 38px 3px rgba(0,0,0,0.07),0 9px 46px 8px rgba(0,0,0,0.06),0 11px 15px -7px rgba(0,0,0,0.10);
    border-color: rgba(0,0,0,0);
  }
}

@media (min-width:512px) {

}

@media (min-width:752px) {
  .c0 {
    height: calc(100% - 16px);
  }
}

@media (min-width:752px) {
  .c3 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:752px) {

}

@media (min-width:752px) {
  .c4 {
    padding: 32px 24px;
  }
}

@media (min-width:752px) {

}

@media (min-width:752px) {
  .c10 svg {
    height: 26px;
    width: 26px;
  }
}

@media (min-width:752px) {
  .c10 {
    margin-left: 24px;
  }
}

<div
  className="c0"
  onClick={[Function]}
  orientation="portrait"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      display="flex"
      elevation={0}
      shape="rounded-big"
    >
      <div
        className="c3"
        orientation="portrait"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
            onClick={[Function]}
          >
            <p
              className="c6 c7"
              color="primary"
              fontFamily="featured"
              fontSize="xxxxl"
              spacing="base"
            >
              High standards require sensible processes
            </p>
            <div
              className="c8"
            >
              <div
                className="c9 c10"
                color="primary"
                height="sm"
                width="sm"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.78 11.28a.75.75 0 01.22.53v.38a.77.77 0 01-.22.53l-5.14 5.13a.5.5 0 01-.71 0l-.71-.71a.49.49 0 010-.7L13.67 12 9.22 7.56a.5.5 0 010-.71l.71-.7a.5.5 0 01.71 0z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            className="c11"
          >
            <p
              className="c12"
              color="grey5"
              fontSize="sm"
            >
              Well, the answer is obvious: “He hasn’t died yet.” Fortunately, for us, Munger has kept on ticking.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Teaser renders correctly with custom headline tag 1`] = `
.c6 {
  margin: 0;
  color: #00C8DC;
  font-size: 40px;
  line-height: 44px;
  font-family: OswaldBold,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  white-space: normal;
  overflow: hidden;
  padding-left: 2px;
  max-height: calc(44px * 2);
  -webkit-line-clamp: 2;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c7 {
  font-weight: bold;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  max-height: -webkit-fit-content;
  max-height: -moz-fit-content;
  max-height: fit-content;
  padding-top: 0;
  text-transform: none;
  line-height: 58px;
  font-size: 75px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  cursor: pointer;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-property: border-color,box-shadow,-webkit-transform;
  -webkit-transition-property: border-color,box-shadow,transform;
  transition-property: border-color,box-shadow,transform;
  border-radius: 8px;
  height: 100%;
  width: 100%;
}

.c1 {
  position: relative;
  outline: none;
  width: 100%;
}

.c0 {
  height: calc(100% - 16px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  margin-top: 16px;
}

.c0 > div {
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c4 {
  -webkit-flex: 2 1 auto;
  -ms-flex: 2 1 auto;
  flex: 2 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 24px 16px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  text-transform: none;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c7 {
    max-height: 100%;
  }
}

@media (min-width:752px) {
  .c7 {
    font-size: 40px;
    line-height: 70px;
  }
}

@media (min-width:1232px) {
  .c7 {
    font-size: 75px;
    line-height: 80px;
  }
}

@media (min-width:512px) {
  .c2:hover {
    -webkit-transform: translateY(-1px);
    -ms-transform: translateY(-1px);
    transform: translateY(-1px);
    box-shadow: 0 24px 38px 3px rgba(0,0,0,0.07),0 9px 46px 8px rgba(0,0,0,0.06),0 11px 15px -7px rgba(0,0,0,0.10);
    border-color: rgba(0,0,0,0);
  }
}

@media (min-width:512px) {

}

@media (min-width:752px) {
  .c0 {
    height: 300px;
  }
}

@media (min-width:752px) {
  .c3 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:752px) {
  .c4 {
    padding: 32px 24px;
  }
}

<div
  className="c0"
  onClick={[Function]}
  orientation="auto"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      display="flex"
      elevation={0}
      shape="rounded-big"
    >
      <div
        className="c3"
        orientation="auto"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
            onClick={[Function]}
          >
            <p
              className="c6 c7"
              color="primary"
              fontFamily="featured"
              fontSize="xxxxl"
              spacing="base"
            >
              High standards require sensible processes
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
